# Nerion-V2-

./: .env.example  .gitignore  .selfcoderignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATASET_EXPANSION_PLAN.md  DOGFOODING_MONITORING_GUIDE.md  Dockerfile  Dockerfile.vertex  GITHUB_SCRAPER_GUIDE.md  MANIFEST.in  NERION_FULL_INTEGRATION_PLAN.md  NERION_INVENTORY.md  NERION_PERCEPTION_INTEGRATION.md  QUICKSTART.md  README.md  ROADMAP.md  SCRAPER_DIVERSITY_BREAKDOWN.md  VERTEX_AI_INTEGRATION.md  agents.md  app.py  check_curriculum_coverage.sh  cloudbuild.yaml  coverage.json  debug_commit_extraction.py  debug_full_pipeline.py  debug_listener_standalone.py  debug_scraper.py  debug_socket.py  diagnose_false_positives.py  digital_physicist_brain.meta.json  digital_physicist_brain.pt  digital_physicist_pretrain.pt  fix_data_leakage.py  fix_training_data_pairing.py  generate_batch_lessons.sh  messy_code.py  messy_code.py.bak  (+22 more)
.github/workflows/: ci.yml  nerion_immune_system.yml  ruff-audit.yml  ruff-e402.yml
.nerion/: plan_cache.json
app/: config.py  journal.jsonl.migrated  journal.py  nerion_autocoder.py  nerion_chat.py  nerion_chat_scaffold.py  settings.yaml  version.py
app/api/: EVENT_PARSING_TEST_GUIDE.md  README.md  injection_detector.py  json_logging.py  output_parser.py  terminal_server.py  test_terminal.html
app/chat/: capabilities.py  commands.py  context.py  engine.py  help.py  intents.py  ipc_electron.py  llm.py  (+21 more)
config/: intents.yaml  meta_policy.yaml  model_catalog.yaml  profiles.yaml  self_mod_policy.yaml  tools.yaml
core/: config.py
daemon/: continuous_learner.py  install_service.sh  nerion_daemon.py  uninstall_service.sh
data/: mined_bugs.json
docs/: CHEATSHEET.md  DUPLICATE_PREVENTION.md  DUPLICATE_PREVENTION_IMPROVEMENTS.md  ELECTRON_MISSION_CONTROL.md  GITHUB_SCRAPER_GUIDE.md  LESSON_GENERATION_CHEATSHEET.md  LESSON_QUALITY_STANDARDS.md  MISSION_CONTROL_DESIGN.md  QUALITY_HARDENING_SUMMARY.md  README.md  README_ELECTRON.md  README_IMMUNE_SYSTEM.md  SCRAPER_DIVERSITY_BREAKDOWN.md  agents.md  evolution_plan.md  ide_bridge_tui.md  learning_cycle.md  models.md  nerion-v2-api.md  ollama_launchagent.md  parent_apprentice.md  planner_grammar.md  policy_dsl.md  proposer_cookbook.md  safety_progress.md  voice_and_hot_reload.md
documentation/: README.md
experiments/: solution_1_graph_sampling.py
models/: README.md  contrastive_history.json  digital_physicist_brain.meta.json  digital_physicist_brain.pt  digital_physicist_pretrain.meta.json  learning_history.json
nerion_digital_physicist/: __init__.py  autonomous_test_fixer.py  learning_orchestrator.py  ouroboros.py  types.py  universal_fixer.py
plugins/: hot_reload.py  loader.py  registry.py  security.py
sandbox_foundations/: agent.py  environment.py  math_logic.py  scaffold.py  test_math_logic.py  training_loop.py  world_model.py
scripts/: audit_e402.py  backup_curriculum.sh  bootstrap.sh  bug_miner.py  check_duplicates.py  check_learning_quality.py  dump_serp.py  health.sh  migrate_add_content_hash.py  monitor_curriculum.sh  populate_replay_store.py  pull_coder_v2.sh  remove_duplicate_lessons.py  rescue_dataset.py  restore_curriculum.sh  review_and_merge_lessons.py  run_learning_cycle.sh  run_local.sh  run_pretraining_cycle.sh  setup_backup_cron.sh  setup_ollama_launchagent.sh  start_nerion.sh  structural_metrics_report.py
selfcoder/: __init__.py  artifacts.py  cli.py  cli_init.py  config.py  coverage_utils.py  diagnostics.py  governor.py  healthcheck.py  io_utils.py  llm_router.py  logging_config.py  main.py  orchestrator.py  scheduler.py  scoring.py  self_improve.py  selfaudit.py  simulation.py  smelly_module.py  testgen.py  types.py  verifier.py
src/: demo.py
tests/: test_advanced_agi_integration.py  test_app_nerion_chat__constants.py  test_app_nerion_chat__fuzzy_matches_command.py  test_app_nerion_chat__main.py  test_app_nerion_chat__matches_command.py  test_app_nerion_chat__rename_run_interactive_to_run_loop.py  test_app_nerion_chat__run_loop.py  test_app_nerion_chat__with_retries.py  test_curiosity_exploration.py  test_full_integration.py  test_meta_learning_integration.py  test_multi_agent_system.py  test_neurosymbolic_hybrid.py  tier1_integration_tests.py
tools/: audit_repo_guard.py  custom.py.bak
vertex_ai/: curriculum_generation_job.py  improved_curriculum_job.py  submit_22_category_workers.sh  submit_22_workers.sh  submit_a1_a2_curriculum.sh  submit_cefr_curriculum.sh  submit_curriculum_job.sh  submit_curriculum_job_cloudbuild.sh  submit_parallel_curriculum_jobs.sh
(+597 files in other folders)
